ONOS-4359: continued work on theming UI - adjusted app detail panel spacing of elements - fixed bug in topo.css

--- a/web/gui/src/main/webapp/app/view/topo/topo.css
+++ b/web/gui/src/main/webapp/app/view/topo/topo.css
@@ -102,7 +102,8 @@ html[data-platform='iPad'] #topo-p-detail {
     left: 50px;
 }
 
-.topo-p p, table {
+.topo-p p,
+.topo-p table {
     padding: 4px;
     margin: 0;
 }
